feat: finish swagger
